--- a/render.yaml
+++ b/render.yaml
@@ -6,8 +6,7 @@ services:
     rootDir: web
     buildCommand: npm install && npm run build
     startCommand: npm start
-    customDomains:
-      - app.nfurudono.com
+    domain: app.nfurudono.com
     envVars:
       - key: WEBHOOK_SECRET
         sync: false  # Set manually in Render dashboard
